--- a/src/containers/welcome/welcome.scss
+++ b/src/containers/welcome/welcome.scss
@@ -827,6 +827,31 @@ $colorSky :#0187d0;
       padding-bottom: 10px;
       border-bottom: 2px solid #2862ae;
     }
+    .index-1{
+      margin:0rem 4.16667rem 1.5625rem;
+      border-left: 5px solid #2862ae;
+      min-height: 80px;
+    }
+    .index-content{
+      padding: 0 30px;
+      font-size: 0.9rem;
+      font-weight: 400;
+    }
+    .index-2{
+    
+      background-image: url('~@/assets/images/index-2.png');
+      margin: 0 0 0 20px;
+      background-repeat: no-repeat;
+      background-position-y: bottom;
+      height: 30px;
+    }
+    .index-3{
+      background-image: url('~@/assets/images/index-3.png');
+      background-position: right;
+      background-repeat: no-repeat;
+      text-align: right;
+      height: 30px;
+    }
   }
   /* 发展历程 */
   .history-1r-content {
