--- a/src/containers/contact/contact.scss
+++ b/src/containers/contact/contact.scss
@@ -70,6 +70,7 @@
     color: #fff;
     font-size: 14px;
     .company-name {
+      color: #fff;
       font-family: 'sc-l';
       margin-bottom: pc2rem(30);
     }
