--- a/src/containers/products/market.scss
+++ b/src/containers/products/market.scss
@@ -25,16 +25,17 @@
       margin-bottom: pc2rem(30);
     } 
     .indicators{
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    left: 0;
+    // position: absolute;
+    // right: 0;
+    // bottom: 0;
+    // left: 0;
     z-index: 15;
     display: flex;
     justify-content: center;
-    padding-left: 0;
-    margin-right: 15%;
-    margin-left: 15%;
+    width: 100%;
+    // padding-left: 0;
+    // margin-right: 15%;
+    // margin-left: 15%;
     list-style: none;
     }
     .banner-circle{
