--- a/src/containers/products/market.scss
+++ b/src/containers/products/market.scss
@@ -37,17 +37,16 @@
     // margin-right: 15%;
     // margin-left: 15%;
     list-style: none;
+    margin-bottom: 0;
     }
     .banner-circle{
-      margin: 5px;
-      width: 15px;
-      height: 15px;
+      margin: 15px 5px 0 5px;
+      width: 8px;
+      height: 8px;
       background: #bed0e7;
       border-radius: 7.5px;
       cursor: pointer;
       &.active{
-        width: 20px;
-        height: 20px;
         background: #2862ae;
         border-radius: 10px;
       }
