--- a/src/containers/products/Indexes.scss
+++ b/src/containers/products/Indexes.scss
@@ -14,8 +14,14 @@
         td, th{
             padding: 0.5rem 0.75rem;
         }
+        cursor: pointer;
     }
     .table-striped tbody tr:nth-of-type(odd){
         background: none;
+        cursor: pointer;
     }
+}
+.link{
+    width: 100%;
+    display: inline-block;
 }
