--- a/src/containers/contact/contact.scss
+++ b/src/containers/contact/contact.scss
@@ -110,3 +110,12 @@
   margin-top: -100px;
   background: #ececec;
 }
+.telephone{
+  display: block;
+  font-size:14px;
+  color: #fff;
+  line-height: 1.5;
+  font-family: 'sc-r';
+  font-weight: 400;
+  margin-bottom: 0;
+}
