产品图片及翻译调整

--- a/src/containers/products/products.scss
+++ b/src/containers/products/products.scss
@@ -64,7 +64,8 @@
     }
     .card-img-top {
       display: block;
-      min-height: 100px;
+      height: 15.5rem;
+      object-fit: contain;
     }
     .card-body {
       background-color: #f7f7f7;
