--- a/src/components/search/searchItem.scss
+++ b/src/components/search/searchItem.scss
@@ -12,6 +12,7 @@
   margin-bottom: 10px;
   padding: 12px pc2rem(60);
   transition: all 300ms ease-in-out;
+  cursor: pointer;
   &:hover {
     box-shadow: 0px 4px 4px #dcdbdb;
     .read-more-icon {
