--- a/src/containers/responsibility/responsibility.scss
+++ b/src/containers/responsibility/responsibility.scss
@@ -143,8 +143,24 @@
     transition: all 300ms ease-in-out;
     &:hover {
       box-shadow: 0px 5px 7px 5px #e7e7ea;
+      cursor: pointer;
       .options {
-        
+        button{
+          color: #2862ae;
+          &.read-btn{
+            background: url('~@/assets/images/responsibility/read-active.png') no-repeat top center;
+          }
+          &.download-btn {
+            background: url('~@/assets/images/responsibility/download-active.png')
+              no-repeat top center;
+            background-size: 34px 34px;
+          }
+          &.preview-btn {
+            background: url('~@/assets/images/responsibility/preview-active.png')
+              no-repeat top center;
+            background-size: 34px 34px;
+          }
+        }
       }
     }
     .file-type-icon {
