--- a/src/components/navbars/navbars.scss
+++ b/src/components/navbars/navbars.scss
@@ -6,6 +6,9 @@
     justify-content: space-around;
   }
 }
+.wap-top{
+  display: none;
+}
 
 .dropdown-toggle {
   &::after {
@@ -149,6 +152,76 @@
       height: 25px;
       margin-right: 20px;
       background: url('../../assets/images/wap-cate.png') center center / 25px auto no-repeat;
+    }
+  }
+  .menu_panel_bg{
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.5);
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    transition: all .3s;
+  }
+  .menu{
+    position: fixed;
+    background: #fff;
+    width: 80%;
+    height: 100%;
+    z-index: 1001;
+    right: -80%;
+    top: 0;
+    bottom: 0;
+    transition: right .2s;
+    &.showM{
+      right: 0;
+      transition: right .5s;
+    }
+    > ul{
+      > li{
+        line-height: 50px;
+        border-bottom: 1px solid #ececeb;
+        text-indent: 45px;
+        font-size: 15px;
+        color:#333333;
+        a{
+          color: #333333;
+        }
+        &.active {
+          background: #2862ae;
+          color: #fff;
+        }
+        > ul {
+          background: #f7f7f7;
+          > li{
+            font-size: 12px;
+            color: #666666;
+            line-height: 40px;
+            a{
+              color: #666666;
+            }
+          }
+        }
+      }
+    }
+    .top{
+      height: 60px;
+      display: flex;
+      padding: 0 10px 0 30px;
+      align-items: center;
+      justify-content: space-between;
+      .language-btn{
+        padding: 0 15px;
+      }
+      .close-btn{
+        width: 18px;
+        height: 18px;
+        padding: 18px;
+        background: url('~@/assets/images/btn-close.png') center center / 18px auto no-repeat;
+      }
     }
   }
 }
