--- a/src/containers/home/home.scss
+++ b/src/containers/home/home.scss
@@ -291,11 +291,16 @@
     }
     .middle-content .product-service .title {
       height: ph2rem(60);
+      margin: 5px 0px 10px;
       span {
         font-size: 18px;
       }
       a {
         font-size: 16px;
+      }
+      .line{
+        width: 38px;
+        height: 2px;
       }
     }
     .animation-div {
@@ -318,7 +323,7 @@
         .icon {
           width: ph2rem(23);
           height: ph2rem(24);
-          margin-left: 3em;
+          margin-left: 2em;
         }
       }
       &.service {
@@ -327,7 +332,7 @@
         .icon {
           width: ph2rem(25);
           height: ph2rem(27);
-          margin-left: 3em;
+          margin-left: 2em;
         }
       }
       .jt {
