--- a/src/containers/welcome/welcome.scss
+++ b/src/containers/welcome/welcome.scss
@@ -555,6 +555,7 @@ $colorSky :#0187d0;
     img,
     .texts {
       width: 33.333333%;
+      height:  33.333333%;;
     }
     .t {
       position: relative;
