--- a/src/components/navbars/navbars.scss
+++ b/src/components/navbars/navbars.scss
@@ -187,12 +187,17 @@
         text-indent: 45px;
         font-size: 15px;
         color:#333333;
+        &.second{
+          background: url('~@/assets/images/second-down.png') 95% 20px / 12px auto no-repeat;
+        }
         a{
           color: #333333;
         }
         &.active {
-          background: #2862ae;
           color: #fff;
+          &.second{
+            background:#2862ae url('~@/assets/images/second-up.png') 95% 20px / 12px auto no-repeat;
+          }
         }
         > ul {
           background: #f7f7f7;
