移动端响应式修改

--- a/src/components/wTitle/wTitle.scss
+++ b/src/components/wTitle/wTitle.scss
@@ -24,3 +24,29 @@
     font-size: pc2rem(48);
   }
 }
+@media screen and (max-width: 576px) {
+  .w-title-c {
+    position: relative;
+    .w-t {
+      position: relative;
+      padding: pc2rem(60) 0;
+      text-align: center;
+      color: #2862ae;
+      font-size: pc2rem(100);
+      font-family: 'sc-b';
+      z-index: 1;
+    }
+    .e-t {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 0;
+      color: #f4f6f9;
+      font-family: 'sc-h';
+      font-size: pc2rem(110);
+      width: 100%;
+      text-align: center;
+    }
+  }  
+}
