--- a/src/containers/contact/contact.scss
+++ b/src/containers/contact/contact.scss
@@ -119,3 +119,158 @@
   font-weight: 400;
   margin-bottom: 0;
 }
+.wechat-shadow, .wechat-code{
+  display: none;
+}
+
+@media screen and (max-width: 576px) {
+  .contact-body {
+    background: #f7f7f7;
+    .com {
+      margin-top:15px;
+      flex-direction: column;
+      padding-top: 20px;
+      overflow: hidden;
+      background: #fff;
+      > div {
+        width: 100%;
+      }
+    }
+    .fo-c {
+      justify-content: center;
+      align-items: center;
+      background: url('~@/assets/images/contact/bg.png') no-repeat;
+      background-size: cover;
+    }
+    .form-body {
+      width: 90%;
+      .form-item {
+        margin-bottom: 10px;
+        align-items: center;
+        > span {
+          display: block;
+          width: 10px;
+          height: 10px;
+          margin-right: 10px;
+          background: url('~@/assets/images/contact/require.png') no-repeat center;
+          background-size: 100% 100%;
+          &.n {
+            background: none;
+          }
+        }
+        input,
+        textarea {
+          flex: 1;
+          outline: none;
+          padding: 10px;
+          font-size: 14px;
+          resize: none;
+          border: 1px solid #c6c6c6;
+        }
+        &.textarea {
+          align-items: flex-start;
+          > span {
+            margin-top: 10px;
+          }
+        }
+      }
+      .submit {
+        display: block;
+        margin: 0 auto;
+        padding: 10px;
+        margin-top: 15px !important;
+        margin-bottom: 20px;
+        width: 100%;
+        background: #2c7ec9;
+        border: 1px solid #2c7ec9;
+        color: #fff;
+        border-radius: 4px;
+        // transition: all 300ms ease-in-out;
+        &:hover {
+          opacity: 0.8;
+        }
+      }
+    }
+    .address {
+      padding: pc2rem(52);
+      background: #2c7ec9;
+      color: #fff;
+      font-size: 14px;
+      .company-name {
+        color: #fff;
+        font-family: 'sc-l';
+        margin-bottom: pc2rem(30);
+      }
+      .d-flex {
+        align-items: center;
+        margin-bottom: 8px;
+        > img {
+          // width: 15px;
+          // height: 15px;
+          margin-right: 10px;
+        }
+      }
+    }
+    .d-flex.wechat {
+      position: relative;
+      padding: pc2rem(40);
+      background: #3059a5;
+      color: #fff;
+      img {
+        height: max-content;
+        margin-right: 15px;
+        &.qrcode {
+          display: none;
+          position: absolute;
+          top: -65px;
+          left: 55%;
+        }
+      }
+      p {
+        font-family: 'sc-m';
+        font-size: 18px;
+      }
+    }
+  }
+  
+  .map-container {
+    width: 100%;
+    margin-top: -100px;
+    background: #ececec;
+  }
+  .telephone{
+    display: block;
+    font-size:14px;
+    color: #fff;
+    line-height: 1.5;
+    font-family: 'sc-r';
+    font-weight: 400;
+    margin-bottom: 0;
+  }
+  // 二维码
+  .wechat-shadow{
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: rgba($color: #000000, $alpha: .5);
+    z-index: 1;
+  }
+  .wechat-code{
+    display: block;
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    left: 50%;
+    margin-left: -75px;
+    top: 50%;
+    z-index: 2;
+    img{
+      width: 100%;
+    }
+  }
+}
