--- a/src/containers/products/detail.scss
+++ b/src/containers/products/detail.scss
@@ -62,3 +62,72 @@
     margin-top: pc2rem(30);
   }
 }
+
+@media screen and (max-width: 576px) {
+  .d-f {
+    background: #fbfbfb;
+    padding: pc2rem(50);
+  }
+  
+  .products-main-body {
+    .meta {
+      flex-direction: column;
+      .cover {
+        width: 100%;
+        height: auto;
+        border: 1px solid #ddd;
+        display: flex;
+        align-items: center;
+        
+        img {
+          width: 100%;
+        }
+      }
+      .head {
+        flex: 1;
+        margin-left: 0px;
+        justify-content: space-around;
+      }
+      .title {
+        font-family: 'sc-b';
+        font-size: 24px;
+        padding: 15px 0;
+        margin-bottom: 0;
+      }
+      .summary {
+        color: #336699;
+        font-family: 'sc-r';
+        font-size: 16px;
+      }
+      .min-preview-imgs {
+        display: none;
+        p {
+          color: #666;
+          font-size: 14px;
+          font-family: 'sc-m';
+          margin-bottom: pc2rem(20);
+        }
+        li {
+          cursor: pointer;
+          width: pc2rem(80);
+          height: pc2rem(80);
+          border: 1px solid #ddd;
+          display: flex;
+          align-items: center;
+          margin-right: 10px;
+          img {
+            // display: block;
+            width: 100%;
+            height: 100%;
+          }
+        }
+      }
+    }
+    .product-intro {
+      margin-top: pc2rem(30);
+      table{
+        width: 100%!important;
+      }
+    }
+  }
+}
