--- a/src/containers/responsibility/responsibility.scss
+++ b/src/containers/responsibility/responsibility.scss
@@ -382,3 +382,391 @@
   text-align: right;
   height: 30px;
 }
+
+@media screen and (max-width: 576px) {
+  .responsibility-arch {
+    .arch-item {
+      border-top: 1px solid #f7f7f7;
+      &.active {
+        background: #e8ecf2;
+      }
+      a {
+        display: block;
+        padding: pc2rem(22) pc2rem(50);
+        font-family: 'sc-r';
+        color: #333;
+      }
+    }
+  }
+  
+  .responsibility-main-body {
+    margin: pc2rem(56) 0;
+  }
+  .responsibility-main-container {
+    padding: 0 1rem;
+    .p-banner {
+      position: relative;
+      width: 100%;
+      .silders {
+        display: none;
+        position: absolute;
+        width: pc2rem(330);
+        min-height: pc2rem(290);
+        left: pc2rem(100);
+        background: rgba(38, 145, 209, 0.8);
+        .title{
+          padding: pc2rem(30);
+          display: flex;
+          justify-content: space-between;
+          line-height: 1em;
+          .tip{
+            display: flex;
+            align-items: center;
+            color: #fff;
+            i{
+              font-style: normal;
+              font-size: pc2rem(35);
+              font-weight: bold;
+            }
+            span{
+              font-size: pc2rem(21);
+            }
+          }
+          .arrow-wrap{
+            width: pc2rem(50);
+            display: flex;
+            justify-content: space-between;
+            .left{
+              cursor: pointer;
+              width: pc2rem(13);
+              height: pc2rem(17);
+              background: url('~@/assets/images/responsibility/arrow_left_100.png') 0 0 / pc2rem(13) pc2rem(17) no-repeat;
+            }
+            .right{
+              cursor: pointer;
+              width: pc2rem(13);
+              height: pc2rem(17);
+              background: url('~@/assets/images/responsibility/arrow_right_100.png') 0 0 / pc2rem(13) pc2rem(17) no-repeat;
+            }
+          }
+        }
+        .content{
+          font-size: pc2rem(18);
+          padding: 0 pc2rem(30);
+          height: pc2rem(150);
+          color: #fff;
+          text-overflow: ellipsis;
+          overflow: hidden;
+          -webkit-line-clamp: 4;
+          -webkit-box-orient: vertical;
+        }
+      }
+      .buttons {
+        justify-content: space-between;
+        border: 1px solid #fff;
+        margin: pc2rem(12);
+        height: pc2rem(40);
+  
+        .btns {
+          flex: 1;
+          color: #fff;
+          border: none;
+          outline: none;
+          background: none;
+          font-size: 14px;
+          font-family: 'sc-m';
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          i{
+            margin-right: pc2rem(10);
+          }
+          &:first-child {
+            border-right: 1px solid #fff;
+            i{
+              display: inline-block;
+              width: pc2rem(22);
+              height: pc2rem(22);
+              background: url('~@/assets/images/responsibility/preview-usual.png') 0 0 / pc2rem(22) auto no-repeat;
+            }
+            &:hover, &.active {
+              background: #fff;
+              color: #2862ae;
+              i{
+                background: url('~@/assets/images/responsibility/preview-active.png') 0 0 / pc2rem(22) auto no-repeat;
+              }
+            }
+          }
+          &:nth-child(2){
+            i{
+              display: inline-block;
+              width: pc2rem(22);
+              height: pc2rem(22);
+              background: url('~@/assets/images/responsibility/download-usual.png') 0 0 / pc2rem(22) auto no-repeat;
+            }
+            &:hover, &.active {
+              background: #fff;
+              color: #2862ae;
+              i{
+                background: url('~@/assets/images/responsibility/download-active.png') 0 0 / pc2rem(22) auto no-repeat;
+              }
+            }
+          }
+        }
+      }
+  
+      .covers {
+        width: 100%;
+      }
+    }
+    .report-item {
+      align-items: center;
+      margin-top: 10px;
+      padding: pc2rem(16) pc2rem(25) pc2rem(16) pc2rem(60);
+      background: #fff;
+      transition: all 300ms ease-in-out;
+      &:hover {
+        box-shadow: 0px 5px 7px 5px #e7e7ea;
+        cursor: pointer;
+        .options {
+          button{
+            color: #2862ae;
+            &.read-btn{
+              background: url('~@/assets/images/responsibility/read-active.png') no-repeat top center;
+            }
+            &.download-btn {
+              background: url('~@/assets/images/responsibility/download-active.png')
+                no-repeat top center;
+              background-size: 34px 34px;
+            }
+            &.preview-btn {
+              background: url('~@/assets/images/responsibility/preview-active.png')
+                no-repeat top center;
+              background-size: 34px 34px;
+            }
+          }
+        }
+      }
+      .file-type-icon {
+        width: 40px;
+        height: 43px;
+        margin-right: pc2rem(30);
+      }
+      .t {
+        .t-t {
+          font-family: 'sc-b';
+          font-size:14px;
+          color: #333333;
+        }
+        .format {
+          font-size: 14px;
+          font-family: 'sc-r';
+          color: #999999;
+        }
+      }
+      .options {
+        display: none;
+        font-family: 'sc-m';
+        font-size: 12px;
+        margin-left: auto;
+        button, a {
+          width: 50px;
+          height: 56px;
+          padding: 0;
+          color: #999999;
+          text-align: center;
+          transition: all 300ms ease-in-out;
+          line-height: 92px;
+          display: inline-block;
+          &:hover {
+            color: #2862ae;
+              &.download-btn {
+                background: url('~@/assets/images/responsibility/download-active.png')
+                  no-repeat top center;
+                background-size: 34px 34px;
+              }
+              &.preview-btn {
+                background: url('~@/assets/images/responsibility/preview-active.png')
+                  no-repeat top center;
+                background-size: 34px 34px;
+              }
+          }
+          &.preview-btn {
+            background: url('~@/assets/images/responsibility/preview.png')
+              no-repeat top center;
+            background-size: 34px 34px;
+          }
+          &.download-btn {
+            margin-left: pc2rem(5);
+            background: url('~@/assets/images/responsibility/download.png')
+              no-repeat top center;
+            background-size: 34px 34px;
+          }
+          &.read-btn {
+            background: url('~@/assets/images/responsibility/read.png') no-repeat
+              top center;
+            &:hover {
+              background: url('~@/assets/images/responsibility/read-active.png')
+                no-repeat top center;
+            }
+          }
+        }
+      }
+    }
+  
+    /* 社会责任 */
+    .community-item {
+      justify-content: space-between;
+      background: #fff;
+      flex-direction: column;
+      .cover {
+        width: 100%;
+        height: 100%;
+      }
+      .community-text {
+        flex: 1;
+        padding: pc2rem(35) pc2rem(80);
+        text-align: center;
+      }
+      .t {
+        margin: pc2rem(30) 0 pc2rem(38);
+        font-family: 'sc-m';
+        color: #333;
+        font-size:18px;
+      }
+      .text {
+        font-family: 'sc-l';
+        font-size: 14px;
+        color: #333;
+      }
+      .date {
+        position: relative;
+        margin-top: pc2rem(40);
+        padding-bottom: 10px;
+        font-family: 'mo-l';
+        font-size: 14px;
+        color: #666;
+        border-bottom: none;
+        &::after {
+          content: '';
+          position: absolute;
+          bottom: -2px;
+          height: 4px;
+          width: 50px;
+          left: 50%;
+          margin-left: -25px;
+          background: #2862ae;
+        }
+      }
+      .read-datail {
+        display: inline-block;
+        margin-top: pc2rem(35);
+        border: 1px solid #2862ae;
+        color: #2862ae;
+        padding: 6px 30px;
+        padding-left: 60px;
+        font-family: 'sc-m';
+        background: url('~@/assets/images/responsibility/read-more.png') no-repeat
+          30px center;
+        transition: all 300ms ease-in-out;
+        &:hover {
+          color: #fff;
+          background: url('~@/assets/images/responsibility/read-more-active.png')
+            no-repeat 30px center;
+          background-color: #2862ae;
+        }
+      }
+    }
+  }
+  
+  .staff-open {
+    position: relative;
+    background: #fff;
+    color: #fff;
+    .open-container {
+      position: relative;
+      padding: pc2rem(40) pc2rem(30);
+      background: #0187d0;
+    }
+    .o-cover {
+      display: block;
+      width: 100%;
+      min-height: 200px;
+    }
+    .o-title {
+      position: relative;
+      font-family: 'sc-b';
+      padding-left: 0px;
+      font-size: 18px;
+      &::before {
+        display: none;
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 5px;
+        width: 12px;
+        height: 70%;
+        background: #fff;
+      }
+    }
+    .o-date {
+      padding-left: 0px;
+      font-family: 'sc-b';
+      font-size: 14px;
+    }
+    .o-content {
+      padding-left: 0px;
+      margin-top: 5px;
+      font-family: 'sc-r';
+      font-size: 14px;
+    }
+    .side-btn {
+      position: absolute;
+      top: 30px;
+      right: pc2rem(64);
+      :hover{
+        background: none!important;
+      }
+      button {
+        width: pc2rem(250);
+        height: pc2rem(70);
+        background: none!important;
+        &:hover,&:active{
+          background: none!important;
+        }
+        // &:last-child {
+        //   background: #2862ae;
+        // }
+      }
+    }
+  }
+  .return{
+    background: transparent;
+  }
+  
+  .index-1{
+    margin:0rem 4.16667rem 1.5625rem;
+    border-left: 5px solid #2862ae;
+    min-height: 80px;
+  }
+  .index-content{
+    padding: 0 30px;
+    font-size: 0.9rem;
+    font-weight: 400;
+  }
+  .index-2{
+  
+    background-image: url('~@/assets/images/index-2.png');
+    margin: 0 0 0 20px;
+    background-repeat: no-repeat;
+    background-position-y: bottom;
+    height: 30px;
+  }
+  .index-3{
+    background-image: url('~@/assets/images/index-3.png');
+    background-position: right;
+    background-repeat: no-repeat;
+    text-align: right;
+    height: 30px;
+  }
+}
