--- a/src/containers/products/detail.scss
+++ b/src/containers/products/detail.scss
@@ -17,7 +17,8 @@
       align-items: center;
       
       img {
-        width: 100%;
+        max-width: 100%;
+        max-height: 100%;
       }
     }
     .head {
@@ -52,8 +53,8 @@
         margin-right: 10px;
         img {
           // display: block;
-          width: 100%;
-          height: 100%;
+          max-width: 100%;
+          max-height: 100%;
         }
       }
     }
