--- a/src/containers/products/Indexes.scss
+++ b/src/containers/products/Indexes.scss
@@ -18,10 +18,16 @@
             padding: 0.5rem 0.75rem;
         }
         cursor: pointer;
+        &:hover{
+            color: #2862ae;
+        }
     }
     .table-striped tbody tr:nth-of-type(odd){
         background: none;
         cursor: pointer;
+        &:hover{
+            color: #2862ae;
+        }
     }
 }
 .link{
