--- a/src/components/wTitle/wTitle.scss
+++ b/src/components/wTitle/wTitle.scss
@@ -23,6 +23,16 @@
     font-family: 'sc-h';
     font-size: pc2rem(48);
   }
+  .b-t {
+    position: absolute;
+    top: 85%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 0;
+    color: #ccc;
+    font-family: 'sc-h';
+    font-size: pc2rem(20);
+  }
 }
 @media screen and (max-width: 576px) {
   .w-title-c {
